Fixed text alignment with icons..

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -58,6 +58,16 @@ body {
 
 /* contact start */
 
+.contact_address {
+    margin-left:38px;
+    /* line-height: 1.4rem; */
+    padding-bottom:7px;
+}
+
+.contact_hours {
+    margin-left:38px;
+}
+
 .contact_button {
     margin: 80px 0px 0px 407px;
     padding: 25px 50px;
@@ -68,6 +78,15 @@ body {
     text-align: center;
     text-decoration:none;
     transition: all 0.2s;
+}
+
+.contact_icon {
+    margin-right:10px;
+}
+
+.contact_icon_text {
+    vertical-align: 35%;
+    display: inline;
 }
 
 .contact_button:hover {
